--- a/wikicurses.1
+++ b/wikicurses.1
@@ -35,6 +35,11 @@ o
 open search box
 .RE
 .PP
+q or :q[uit]
+.RS 4
+exit
+.RE
+.PP
 :bmark
 .RS 4
 bookmark page
@@ -48,6 +53,17 @@ open bookmarks
 :wikis
 .RS 4
 open list of configured wikis, see \fBwikicurses.conf\fR(5)
+.RE
+.SS Bookmarks Menu
+.PP
+x or delete
+.RS 4
+delete selected bookmark
+.RE
+.PP
+u
+.RS 4
+undo deletion
 .RE
 .SH OPTIONS
 .PP
