--- a/wikicurses.conf.5
+++ b/wikicurses.conf.5
@@ -4,7 +4,7 @@ wikicurses \- curses interface for MediaWiki
 .SH SYNOPSIS
 /etc/wikicurses.conf
 
-~/.conf/wikicurses/config
+~/.config/wikicurses/config
 .SH DESCRIPTION
 The configuration file for wikicurses is devided into sections with the "general" section containing general settings.  All other sections specify individual wikis.
 .SH EXAMPLE
