--- a/wikicurses.1
+++ b/wikicurses.1
@@ -1,4 +1,4 @@
-.TH wikicurses 1 2014-10-11
+.TH wikicurses 1 2014-10-12
 .SH NAME
 wikicurses \- curses interface for MediaWiki
 .SH SYNOPSIS
@@ -79,7 +79,7 @@ url or name of wiki to use
 .PP
 \fB\-d\fR
 .RS 4
-list "On This Day" pages (Wikipedia onlu)
+list "On This Day" pages (Wikipedia only)
 .RE
 .PP
 \fB\-f\fR
