--- a/wikicurses.conf.5
+++ b/wikicurses.conf.5
@@ -1,4 +1,4 @@
-.TH wikicurses.conf 5 2014-10-11
+.TH wikicurses.conf 5 2014-10-12
 .SH NAME
 wikicurses \- curses interface for MediaWiki
 .SH SYNOPSIS
@@ -6,7 +6,7 @@ wikicurses \- curses interface for MediaWiki
 
 ~/.config/wikicurses/config
 .SH DESCRIPTION
-The configuration file for wikicurses is devided into sections with the "general" section containing general settings.  All other sections specify individual wikis.
+The configuration file for wikicurses is divided into sections with the "general" section containing general settings.  All other sections specify individual wikis.
 .SH EXAMPLE
 .nf
 [general]
