Add short form of --wiki, improve OPTIONS section of wikicurses.1

--- a/wikicurses.1
+++ b/wikicurses.1
@@ -67,27 +67,27 @@ undo deletion
 .RE
 .SH OPTIONS
 .PP
-\fB\-h\fR
+\fB\-h,\fR \-\-help
 .RS 4
 display help message
 .RE
 .PP
-\fB\-\-wiki <wiki>\fR
+\fB\-w,\fR \-\-wiki <wiki>
 .RS 4
 url or name of wiki to use
 .RE
 .PP
-\fB\-d\fR
+\fB\-d,\fR \-\-today
 .RS 4
 list "On This Day" pages (Wikipedia only)
 .RE
 .PP
-\fB\-f\fR
+\fB\-f,\fR \-\-featured
 .RS 4
 show featured articles (Wikipedia only)
 .RE
 .PP
-\fB\-p\fR
+\fB\-p,\fR \-\-picture
 .RS 4
 show pictures of the day (Wikipedia only)
 .RE
