Add examples to wikicurses.1

--- a/wikicurses.1
+++ b/wikicurses.1
@@ -91,6 +91,22 @@ show featured articles (Wikipedia only)
 .RS 4
 show pictures of the day (Wikipedia only)
 .RE
+.SH EXAMPLES
+.PP
+wikicurses Wiki
+.RS 4
+look up "Wiki" on the default wiki
+.RE
+.PP
+wikicurses -w ArchWiki Dwm
+.RS 4
+look up "Dwm" on the Archlinux Wiki, where "ArchWiki" is configured in \fbwikicurses.conf\fr(5)
+.RE
+.PP
+wikicurses -w http://en.wiktionary.org/w/api.php penguin
+.RS 4
+look up "penguin" on Wiktionary
+.RE
 .SH SEE ALSO
 \fBwikicurses.conf\fR(5)
 .SH BUGS
