--- a/wikicurses.conf.5
+++ b/wikicurses.conf.5
@@ -21,10 +21,10 @@ url = https://wiki.archlinux.org/api.php
 .PP
 default
 .RS 4
-the name of the wiki to use by default
+The name of the wiki to use by default
 .RE
 .PP
 url
 .RS 4
-the url to api.php on the MediaWiki site
+The url to api.php on the MediaWiki site
 .RE
