Support any featured feeds available on wiki; add ui for opening them

--- a/wikicurses.1
+++ b/wikicurses.1
@@ -56,6 +56,11 @@ Open bookmarks
 .RS 4
 Open list of configured wikis, see \fBwikicurses.conf\fR(5)
 .RE
+.PP
+:feeds
+.RS 4
+Open a list of featured feeds on the current wiki
+.RE
 .SS Bookmarks Menu
 .PP
 x or delete
@@ -85,21 +90,10 @@ Display help message
 Url or name of wiki to use
 .RE
 .PP
-\fB\-d,\fR \-\-today
+\fB\-f,\fR \-\-feed <name>
 .RS 4
-List "On This Day" pages (Wikipedia only)
+view featured feed
 .RE
-.PP
-\fB\-f,\fR \-\-featured
-.RS 4
-Show featured articles (Wikipedia only)
-.RE
-.PP
-\fB\-p,\fR \-\-picture
-.RS 4
-Show pictures of the day (Wikipedia only)
-.RE
-.SH EXAMPLES
 .PP
 wikicurses Wiki
 .RS 4
