Add example for featured feed to manpage

--- a/wikicurses.1
+++ b/wikicurses.1
@@ -94,6 +94,7 @@ Url or name of wiki to use
 .RS 4
 view featured feed
 .RE
+.SH EXAMPLES
 .PP
 wikicurses Wiki
 .RS 4
@@ -108,6 +109,11 @@ Look up "Dwm" on the Archlinux Wiki, where "ArchWiki" is configured in \fbwikicu
 wikicurses -w http://en.wiktionary.org/w/api.php penguin
 .RS 4
 Look up "penguin" on Wiktionary
+.RE
+.PP
+wikicurses -f potd
+.RS 4
+Open "potd" (Picture of the Day) feed
 .RE
 .SH SEE ALSO
 \fBwikicurses.conf\fR(5)
