--- a/wikicurses.conf.5
+++ b/wikicurses.conf.5
@@ -12,17 +12,27 @@ The configuration file for wikicurses is divided into sections with the "general
 [general]
 default = Wikipedia
 
+[keymap]
+q = quit
+c = contents
+o = open
+
 [Wikipedia]
 url = http://en.wikipedia.org/w/api.php
 
 [ArchWiki]
 url = https://wiki.archlinux.org/api.php
 .SH OPTIONS
+.SS general
 .PP
 default
 .RS 4
 The name of the wiki to use by default
 .RE
+.SS keymap
+This section configures the keyboard bindings of wikicurses, in the format "key=command". Command can be any ex command supported by wikicurses.
+.SS Other Sections
+Other sections are treated as wiki entries.
 .PP
 url
 .RS 4
