Document editing support

--- a/wikicurses.1
+++ b/wikicurses.1
@@ -1,4 +1,4 @@
-.TH wikicurses 1 2014-10-17
+.TH wikicurses 1 2014-10-25
 .SH NAME
 wikicurses \- curses interface for MediaWiki
 .SH SYNOPSIS
@@ -60,6 +60,11 @@ Open list of configured wikis, see \fBwikicurses.conf\fR(5)
 :feeds
 .RS 4
 Open a list of featured feeds on the current wiki
+.RE
+.PP
+:edit
+.RS 4
+Edit wiki page (opens in $EDITOR)
 .RE
 .SS Bookmarks Menu
 .PP
