Update manpage for new key bindings

--- a/wikicurses.1
+++ b/wikicurses.1
@@ -1,4 +1,4 @@
-.TH wikicurses 1 2014-10-26
+.TH wikicurses 1 2014-11-10
 .SH NAME
 wikicurses \- curses interface for MediaWiki
 .SH SYNOPSIS
@@ -24,6 +24,16 @@ Scroll down one page
 ^f or pageup
 .RS 4
 Scroll up one page
+.RE
+.PP
+g or home
+.RS 4
+Scroll to top
+.RE
+.PP
+G or end
+.RS 4
+Scroll to bottom
 .RE
 .SS Pager
 .PP
