Allow going back and forward in history

--- a/wikicurses.1
+++ b/wikicurses.1
@@ -1,4 +1,4 @@
-.TH wikicurses 1 2014-11-10
+.TH wikicurses 1 2014-12-29
 .SH NAME
 wikicurses \- curses interface for MediaWiki
 .SH SYNOPSIS
@@ -80,6 +80,16 @@ Clears the cache; exiting the program has an equivalent effect
 :edit
 .RS 4
 Edit wiki page (opens in $EDITOR)
+.RE
+.PP
+:back, h, or left
+.RS 4
+Go backward in history
+.RE
+.PP
+:forward, l, or right
+.RS 4
+Go forward in history
 .RE
 .SS Bookmarks Menu
 .PP
