--- a/wikicurses.conf.5
+++ b/wikicurses.conf.5
@@ -1,4 +1,4 @@
-.TH wikicurses.conf 5 2014-11-23
+.TH wikicurses.conf 5 2014-12-29
 .SH NAME
 wikicurses \- curses interface for MediaWiki
 .SH SYNOPSIS
@@ -17,6 +17,10 @@ mouse = False
 q = quit
 c = contents
 o = open
+h = back
+l = forward
+left = back
+right = forward
 
 [Wikipedia]
 url = http://en.wikipedia.org/w/api.php
