Add :links command

--- a/wikicurses.1
+++ b/wikicurses.1
@@ -62,6 +62,11 @@ Bookmark page
 Open bookmarks
 .RE
 .PP
+:links
+.RS 4
+Open list of internal links in page
+.RE
+.PP
 :wikis
 .RS 4
 Open list of configured wikis, see \fBwikicurses.conf\fR(5)
