Add :iwlinks command
Also depend on lxml, pay atention to site mainpage setting, and use
beautifulsoup instead of xml.etree.ElementTree

--- a/wikicurses.1
+++ b/wikicurses.1
@@ -1,4 +1,4 @@
-.TH wikicurses 1 2014-12-29
+.TH wikicurses 1 2014-12-30
 .SH NAME
 wikicurses \- curses interface for MediaWiki
 .SH SYNOPSIS
@@ -65,6 +65,11 @@ Open bookmarks
 :links
 .RS 4
 Open list of internal links in page
+.RE
+.PP
+:links
+.RS 4
+Open list of interwiki links in page
 .RE
 .PP
 :wikis
