Add :help command

--- a/wikicurses.1
+++ b/wikicurses.1
@@ -1,4 +1,4 @@
-.TH wikicurses 1 2014-12-30
+.TH wikicurses 1 2015-02-22
 .SH NAME
 wikicurses \- curses interface for MediaWiki
 .SH SYNOPSIS
@@ -90,6 +90,11 @@ Clears the cache; exiting the program has an equivalent effect
 :edit
 .RS 4
 Edit wiki page (opens in $EDITOR)
+.RE
+.PP
+:help
+.RS 4
+Display man page
 .RE
 .PP
 :back, h, or left
