Add :random command

--- a/wikicurses.1
+++ b/wikicurses.1
@@ -106,6 +106,11 @@ Go backward in history
 .RS 4
 Go forward in history
 .RE
+.PP
+:random
+.RS 4
+Go to a random page
+.RE
 .SS Bookmarks Menu
 .PP
 x or delete
