--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 - Implement search feature (Partially implemented)
 - Add :set command / other method to configure from within wikicurses
+- Bash completion (currently only has zsh completion)
