--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
 - Implement search feature (Partially implemented)
 - Add :set command / other method to configure from within wikicurses
 - Bash completion (currently only has zsh completion)
+- Display % progress in page in the bottom right corner
