Document search feature

--- a/wikicurses.1
+++ b/wikicurses.1
@@ -116,6 +116,11 @@ Go forward in history
 .RS 4
 Go to a random page
 .RE
+.PP
+/
+.RS 4
+Search page and highlight matching text. Supports regular expressions.
+.RE
 .SS Bookmarks Menu
 .PP
 x or delete
