Add :langs command

--- a/wikicurses.1
+++ b/wikicurses.1
@@ -1,4 +1,4 @@
-.TH wikicurses 1 2015-02-24
+.TH wikicurses 1 2015-04-06
 .SH NAME
 wikicurses \- curses interface for MediaWiki
 .SH SYNOPSIS
@@ -75,6 +75,11 @@ Open list of interwiki links in page
 :extlinks
 .RS 4
 Open list of external links in page to open in browser
+.RE
+.PP
+:langs
+.RS 4
+Open list of languages the article is available in
 .RE
 .PP
 :wikis
