--- a/wikicurses.1
+++ b/wikicurses.1
@@ -1,4 +1,4 @@
-.TH wikicurses 1 2015-04-06
+.TH wikicurses 1 2015-04-07
 .SH NAME
 wikicurses \- curses interface for MediaWiki
 .SH SYNOPSIS
@@ -159,6 +159,13 @@ Url or name of wiki to use
 .RS 4
 view featured feed
 .RE
+.PP
+\-\-dumpcolors
+.RS 4
+print default color settings
+.RE
+.SH COLOR SETTINGS
+To use colors other than the defaults, you need a file called ~/.config/wikicurses/colors.json.  To create this file with the default color settings, run wikicurses --dumpcolors > ~/.config/wikicurses/colors.json.  This is a json object containing various things that can be colored.  Each has an array containing the foreground color, display settings (bold, underline, or standout), and the background color.  The color options are the same as in urwid (see http://urwid.org/manual/displayattributes.html).
 .SH ENVIRONMENT VARIABLES
 .PP
 HOME, XDG_CONFIG_HOME
