Set text alignment in colors

--- a/wikicurses.1
+++ b/wikicurses.1
@@ -1,4 +1,4 @@
-.TH wikicurses 1 2015-04-10
+.TH wikicurses 1 2015-04-16
 .SH NAME
 wikicurses \- curses interface for MediaWiki
 .SH SYNOPSIS
@@ -165,7 +165,7 @@ view featured feed
 write current color settings to config file
 .RE
 .SH COLOR SETTINGS
-To use colors other than the defaults, you need a file called ~/.config/wikicurses/colors.  To create this file with the current color settings, run wikicurses --dumpcolors.  This is a configuration file containing various things that can be colored.  Each has allows setting display settings (bold, underline, or standout), foreground color, and background color.  Multiple settings can be set by separating with spaces.  The color options are the same as in urwid (see http://urwid.org/manual/displayattributes.html).
+To use colors other than the defaults, you need a file called ~/.config/wikicurses/colors.  To create this file with the current color settings, run wikicurses --dumpcolors.  This is a configuration file containing various things that can be colored.  Each has allows setting display settings (bold, underline, or standout), foreground color, background color, and text alignment.  Multiple settings can be set by separating with spaces.  The color options are the same as in urwid (see http://urwid.org/manual/displayattributes.html).
 .SH ENVIRONMENT VARIABLES
 .PP
 HOME, XDG_CONFIG_HOME
